# nschool

./: Cargo.toml  README.md  school.db
database/: nschool.sqlite  nschool.sqlite-shm  nschool.sqlite-wal
sql/: schema.sql
sql/migrations/: 001_init.sql  002_add_admin.sql
sql/seeders/: 001_initial_seed.sql  002_admin_seed.sql
src/: app.rs  main.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/db/: bootstrap.rs  executor.rs  migrate.rs  mod.rs  seeder.rs
src/db/repositories/: admin_repository.rs  mod.rs  note_repository.rs  repository.rs  student_repository.rs  subject_repository.rs
src/ui/: landing.rs  mod.rs  navigation.rs  page.rs  tabs.rs
src/views/: mod.rs
