[package]
name = "nschool"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = true, features = ["default", "glow"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
image = "0.25"
